# SafetyPolytope

./: .gitignore  .pre-commit-config.yaml  README.md  format.sh  main.py  pyproject.toml  setup.py
exp_configs/: eval_config.yaml  eval_generation_config.yaml  interpret_config.yaml  polytope_config.yaml  save_hs_config.yaml  test_model_config.yaml  visualize_violation_config.yaml
exp_configs/dataset/: beaver_tails.yaml  harmbench.yaml  wildguard.yaml
exp_configs/hydra/launcher/: submitit_slurm.yaml
src/safety_polytope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/safety_polytope/common/: load_util.py  outputs.py
src/safety_polytope/data/: beaver_data.py  model_instructions.py  process_hb_states.py  safety_data.py  save_hs.py
src/safety_polytope/evaluation/: generation.py  guard_evaluation.py  mmlu.py  mmlu_categories.py
src/safety_polytope/harmbench/: README.md  run_harmbench_pipeline.py
src/safety_polytope/harmbench/config/: pipeline_config.yaml  test_config.yaml
src/safety_polytope/harmbench/stages/: attack_generation.py  data_processing.py  (+4 more)
src/safety_polytope/interpret/: data_robustness.ipynb  data_robustness.py  mutual_info.py  plot_kld.py  polytope_analysis.py  response_panel.py  save_hs.py  utils.ipynb  visualize_violation.py
src/safety_polytope/polytope/: learn_polytope.py  lm_constraints.py  run_beaver_pipeline.py  run_train_pipeline.py  safe_rep_model.py  test_model.py
src/safetypolytope.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/scripts/: download.sh  exp_inc_num_layers.sh  exp_inc_num_phi.sh  exp_inc_subsets.sh  exp_learn_polytope.sh  exp_vary_label_distribution.sh  run_beaver_pipeline.sh  run_harmfulbench_pipeline.sh  run_interpret.sh  run_save_hidden_states.sh  run_steered_generation.sh  run_test_models.sh  run_train_pipeline.sh
(+4 files in other folders)
